@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX anjuta-3.5.91-cxx-check.patch 677 SHA256 ff5181d0c056c74b9716b99d32b977a1d9058f67b4e6d9b01379aaf684658571 SHA512 aa442709abdc079390d466f7339931732d381e3212158c4f2ff493db0d788004c6a319c388cd10cd9a4e4052f3d55d8b713eb3d0d6ad428c3c5e46d948e476a2 WHIRLPOOL 7586ca17396a3ca64908e8ffc3382d303e01efb7671137527646e0272bec9129b080585b34327e2ac0304e1178686f7e09efca5d54cf2c0811bd391e0552e3fa
 AUX anjuta-3.8.4-librt.patch 1384 SHA256 f6c9c436f1406acc7fd55b9d5041b79232fa12ea4b788bb1d8a7b04b6cf37968 SHA512 3f4e2bc743b71767e9373aedf8f781d3aa2f88ceeae9f734abe0f9fed14966dcc739f82e42c13e4486849207e12aac83d8ee6abaac26c68b6e393b75ef7372b2 WHIRLPOOL aa8854fb0febca04d61a305bde4d03249adf9c2b1b1a18240a9761bc15fab2668c166c5f065b8df1fa1d9359e7d2f75d6afa2fbded75bb8e3c5d84664dd8c939
 DIST anjuta-3.6.2.tar.xz 5178068 SHA256 2cf44120dcf22c4f4f25bbc65d3641c206e627776ab0f3a37ff0059844d581a2 SHA512 1c7012b97f51cce056d38c79602da16aab04fa06f24a774f66a78eedfca812ce6ddbb94bcd69fa853a8e2ac4a2abbb5d74006dda6192f379d7ebc9ff5702e711 WHIRLPOOL f013deb02459331128f777fc052901b655c3ce293e1cd321f230862191be4ef8765143100bb4c341eff1a09c857563d824c63c262513a6537518ca3a90584ea6
 DIST anjuta-3.8.4.tar.xz 5322424 SHA256 eea77ef71dd156a2296cbaf02a343f3b9099aec245ee7d1495f002ff2f81fa17 SHA512 946afea788851b099e1b8d11e57c89c96c38db2513d44c6ad14d9b4403310cb0071169425749c424bf6699da3c23ca1765328940fcf8cb4b1943a565f1866794 WHIRLPOOL 51ecbb83606e7588cc5d1e2da0771722b293880b5d8d3fe9c14471bb90e9496da9a3f4190af6fd044974f4cede728e3912253ee5069d8a7c4a1cc0102b1bd042
 EBUILD anjuta-3.6.2-r1.ebuild 3730 SHA256 04276382684031e1c86aaa7718ebe6abd22f194c420ddb5f35b049c5e207a55a SHA512 540d572f94f03aadc2cca55a2f12039c96195b542c15cb22e24cde746ae3672820258867f718906904f5789320b971db72806f7b6c163700c4ef649c7b6bee3b WHIRLPOOL b4b07a78ff0096410efb9e3ba61745f27a2f4f49f032729c9a36539bebded470290656f4098a147bbaefdf4999582e0cfe79250d5b6fcdca0cd0295986de5c74
-EBUILD anjuta-3.8.4.ebuild 3696 SHA256 7316d6420469be1f0329f3d17831932774616dfe36dc399f02c481eeddbd8d8a SHA512 75c2bb97ee62c6f29ee1441b3d54d3b0b258ce8062c364a686555d3796e88e1d7d9428e47099304381087b66b5eff3e1cd1cf8cd10cf01d7139d7b6c30e3c31d WHIRLPOOL 97fbff21bda7cbdbbe9d7ea5014825924a653e066d920a15c6afc806004d675be92de2cfd01b5b6aa1da53e7ad380d874374f5fc515f2a1cca83915adf94c2d0
-MISC ChangeLog 25200 SHA256 87c1ca25bd65a3a3cf1f2a8b71bc821c7f2d31f16960233b9284c52c84ed4ae7 SHA512 b014563b66153ad7b184e411fb9d7bfca6957753af43a794c9cc6f5f6e9bfd0c4071bfe558ad50b44cf9cd41d0029a4cd4daf252c30f78722367c85aa2374d56 WHIRLPOOL 580dc470e4e5c96d6d82232520fbe38b8d236fa2f212b71f0f3fae343efb7c4e3f3bd57229360cf38e49cecd42255a9b7aa27a722344218a5bf84fa39bd595f1
+EBUILD anjuta-3.8.4.ebuild 3730 SHA256 67cbc2226f7753eaa3e5afd0d734c05614478d4f65ddb83bc91f620498d78d30 SHA512 5174811b9c96f0148c9093fb5755291942894c0d1f634077d130d0209bc7dd9f1f2cf39844fd1f6e0849c86ce364ec0c93a1489433b17eaa7d5f764d67091ad7 WHIRLPOOL d11813797c2ddb62368b080429c8921942f60c5bb31cfe6e08d43eec867c7f19733d876e8c5ecc34fe19cd7a92bbebf32b5aa5ced967850fc77e5d25ef9231c8
+MISC ChangeLog 25304 SHA256 511daf1c9ef0ba7418323922ce0f4b23edad9fb624f6d9cb2c9ec9588d85fbf3 SHA512 43cb4878c2f74afd04c30c7099fa4f35df37f65d8f0780c81e7e970d9c6b2d821d44eab4d279b1d02dbfaac6000d9e912a12e548192570c9d1c3721543679df8 WHIRLPOOL 33454a3b2cbaa59eefa4ec12c9a9ef4a375667ad89cba3156c56c61a4931e67e9e81fe82dba354599467e8f17b2e0875437e0b048f096c521931fef144cfdfd4
 MISC metadata.xml 457 SHA256 8f80780fcedc3f018a77b6af83a8643022279ba9d4e1709d3b4b1ecc83a44156 SHA512 b06f36a7da1121e7ddd2c7cfb05637e79c4387ab5ef3d46089261dcbe1cb6a810840256c805e30a9342fbe10f1a470cd471cc48b460714e70a7176c392f34f1d WHIRLPOOL e95ea6995529e5a4b3ced5a7362bf26fe6b331d5b53aa2240e7c104b32be378c4454a00a77cf4a2dc199b048414063f77b22fd9df94f93d26b9287d6aefbb25d
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.21 (GNU/Linux)
+
+iEYEAREIAAYFAlIq/6YACgkQ1fmVwcYIWAbMdQCfbwScslFaTMXgqiyoZ5vTpXY4
+4PsAoL5/IBiJBiltotRYC9fncgZDYOEY
+=OGyg
+-----END PGP SIGNATURE-----
