@@ -1,27 +1,21 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX moc-2.5.0_beta1-no-automagic-popt.patch 357 SHA256 3db0e3d78f19f5c66ae815f790cae22945aa732505e03055d3eb29defa15188a SHA512 067f77214cc1610c14fd441709014b7644bba9b604142e710bd7733cd846c1df0663eee33295fb2f877b8aca6352141fc49ae5f9259b7f12267eb580d130dbef WHIRLPOOL 8b5cf974326f279efc05ebda5d2375105f61ae97404430b5d8af718441c2f6b77540618262303553f01c79dac953f3b09d685cc30a7f12d4c2be3e7c3f485b3a
 DIST moc-2.5.0-beta1.tar.bz2 570468 SHA256 076816da9c6d1e61a386a1dda5f63ee2fc84bc31e9011ef70acc1d391d4c46a6 SHA512 16f1cf35706bbf410197651fd4398114ae2c95103773886629f0e1884900f2b865b9b6354da507a57af021a7d6599cd2e1d7e338791dc4a6f55e6c6c193800f2 WHIRLPOOL 793fa9bdd23da14cc558262335b81560aa82a86c641b2a163af64d80659b652ada83193b0ed2888bfbe0d0b43cb35447ad0b0fa8de394742c0e162d3050520de
-DIST moc-2.5.0_alpha4_p20111211.tar.xz 231324 SHA256 1879590fc5054a4599b5932fa5b985ed6acfe88ca1a279dd6ed07607bb5be968 SHA512 05bdc506040cb7c77853d53c3199824451393c0e27adcbecfd23083f84c3a62b589e8d19d3f030fba1eb5e06bf8db83946b870ee39515b2ed4cff98218229b1b WHIRLPOOL 954aae7523cdb5d764438c6f79e54855528e1ede8ac46ed1f7019b0270bb3f357896f7eee8c6b897c31e1eb44757d004ba495a7e6553f400e919fe32db6b24ce
-EBUILD moc-2.5.0_alpha4_p20111211.ebuild 2204 SHA256 cbf5fe1d9be2c728f1d131aeab6bb46dbb03a7baba5b84e2d9466fa2b2b43820 SHA512 0bf784a08b551824748f53843445e28d6b07affbdbfaa692386326f9aa028e940d90baf027093a39fc02daf38eb7894651ad4804b34fa6f0e1720dc1783bed8d WHIRLPOOL 72bcae277b34fe1feb2e91d43cf397c0722b0541d2ffff8400abfc82ceb3c779fc83a8f052fc1e9315ab7f49b96c64fa4ed918e4ce657b948fd953f6dc73caf1
+DIST moc-2.5.0_beta1_p20130907.tar.xz 510688 SHA256 a81ece89fc56da5414f74bb6b35db304689ce00267d42a6814ee3cc3a5271182 SHA512 f499658321e1b2847f6441c9dd02f5b270c18f5184fdd134b19c3cfb7e2bebb04944b3001fa6a648855dd83f2c5055050a0751bc9d9836fc8b01c34ac20d4139 WHIRLPOOL 6d568f522dbd029d2a3561183f1ef4b005af54a0431e791b5a37013d9eb0645924ed50d2062cbb9c2711be38f4d0df46f8f9fa7d7e0650153dd028dbc27bfd86
 EBUILD moc-2.5.0_beta1-r1.ebuild 2598 SHA256 6e267c95d1762f5de51dd2607e7760145ac62f04cd1fb424156b8e97bf40af29 SHA512 8fc07d4b8b013517ae7ef1441e13f98b255e658bfd1b8635608ea56395ca4c7cd996a5e4e9252657e944a8e1d577f028c9f6136319a552674b22d691785fb8cb WHIRLPOOL 7780cf3746c9f876185118fcb21af7fc62508fdd59a1089916a9ea53319481abddc7f0a852545e0ea7a043deb40a8ed781eeea8ceae3a50f76580c0c79342b3b
-MISC ChangeLog 15899 SHA256 428275a83e5304d2500f742dcc8f53778f29a8d2a93f2130d2abbd3870cd6403 SHA512 dff04de7bf683739ee02689bcda59053557e53d730443fa081cd28779c298035ae429d8f6e36b1bc2e6408bbdfea537269798b91b54f1411a6ff8ec2356b9163 WHIRLPOOL ce5bfb0085350dcbf9ad7121f3ab6dd65c067d433be0d730161fa811de911de5fb8dac663b84e08c737c8fc987ceba12813cbcc0fb48f4834977b13cb162c850
+EBUILD moc-2.5.0_beta1_p20130907.ebuild 2280 SHA256 05243e52cdaeae34f29df4365a001704eca63ab92a9b39cc1d67d7b1f25ca632 SHA512 048d0c22d5c2a67f3a687bf4979872e665d75f89023bca8ec48fe8fceba05dcb3cb4cbe03524cc6cb2926ad88be857b99a49cf68ad9823260b8cd492eba04133 WHIRLPOOL 461768cac27f631ef3d944a817a19e9646c52b48288e17a3c00db2a49fdc1d2ca24989acfe844ed872fe5244c2c4541b87f0ab7f7cfd424bdff95eadfbb75ee7
+MISC ChangeLog 16180 SHA256 49ddd5c28baaae28e155844fe79d5179411cc22ccdb64adc5b1b6cf769b2c8f5 SHA512 da04860332d0ffd9b31e0cfc7a61f2dde9cf374a8dd85e541f5059837436bb881b4492582258d41bb79295cf3ffd21f8d7a3efeee756be22190b5918e61d55b3 WHIRLPOOL 0b86d74939ee446465ded392262b8eb5672dbf0b52b43c3e9a23d30605772cec825dae67308d3913f60704ed777730ea1ef92489168ad2ebe7dd131eb1510396
 MISC metadata.xml 502 SHA256 397b0ee37b972cc4af0ed35925a6ecf872c40efe523b5691988efe124246b2a0 SHA512 180b269db5e181ee68bba79510f8798408a9d050d172f6ccabe9b9f6b477cf28d25d4846b1eadff5d05bdf997fc56e55140f896c51b138459a06c2a498e834d1 WHIRLPOOL f174c34a04a43f14dfd46e30b7edda211fcd4aea0fcaa20ac92618b4ef5f8f9f3de9cecea03d6ad7527a2743fe0bf27706e22f94f18607988653125e92239051
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.21 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRaQpXAAoJELp701BxlEWfBr4QALX5Zs5gSsC9GDPXF1HK9CQC
-qGIkKZbnXG2M71kSRTjU4Jm/3pi0rpNi43r4Te30kt79h7WO+EkKm1dPlY12/Ibc
-dXVacU1KMxkMgvibaKiDFudRdU740HsVgucoYoQBMfym6B7xDh8sN7TVQ5vMZKYW
-dar87gr7DLhdsfkOrBon+JJCk3HfpmM0ey67p9o5RzH7TAhIxkXQjB0m3TTGmVzS
-i6HBpgnHj7PscQvNY9qea8nuPMx9gFsnCtgC+P6c8EjZWxoLXQeUElLwmTQa+C6l
-voxuuJHBJdoL3SYvY3pqB7LoA0cMtMEVUiQZ6soTwwza9Ap91lfx/rVS/dvYzXX1
-HPL0TQlxsG+71vDevj6bukDd0ZUP2yGuqZIfO9wusyQq6tDrpPolnDoOsQ706f3W
-M1NfNPRwYwNHhX8yz5w9BA8euXydisvxqjdW4mx7REbwXeHyy626nVhUaBkiIXCF
-6u1ToJzYREoUvise7CCv3NV3XsmROXyCKBzbunxnmQvx1FJiBR4kowXr1F/x2SCX
-EyTMse6yzU7q/hY8eXa1mTrShOud+MywoijCkEBY+ADX1KhaLbVmqNPPzRNLhDNB
-5PSBARlvxjd7HK1QSum7FS/LS6WB3uLaCffM1xYUJifyC1fIHM7KOkj7nzNs53oe
-FBWbv+X7oa4cNXoSRyR2
-=1B/j
+iQEcBAEBCAAGBQJSKv1BAAoJEEqz6FtPBkyjExEIAKPIN7SJMqJCHWFtSrFO4/8v
+kvgJ6HxQeiidS56bqsfRSwu6qQjG0kpPKnLs7RyYV7EYo43qrWTi4jKAwRRzYemy
+WY+A/9AhLoh+9UBnwxiVzN9qRq5eQtHXjvvWcP6IA1N0O4e1yAPw9iQ0apmM7tCN
+q3hsGhCAjRveyhAVJVodTUx2qYZCBC9Nsj6K3/zDdVmcilNrlri5512dyl3QCORc
+DPCpaAgsNUOHtiMqZ2/MFNhQCQpGbsQmEUUbUCntLKROvL2urwDIE5rwG0CorfU+
+Kj7TIb8WC1I+SrSG0awQwmZEOKZjLvCWtq/ubfPnrvK6/s3yfG3Vv5jvXBMmKUA=
+=aHt1
 -----END PGP SIGNATURE-----
