@@ -1,53 +1,57 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/moc/moc-2.5.0_alpha4_p20111211.ebuild,v 1.8 2012/05/05 08:39:33 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/moc/moc-2.5.0_beta1_p20130907.ebuild,v 1.1 2013/09/07 10:15:18 radhermit Exp $
 
-EAPI=4
-inherit autotools
+EAPI=5
 
 DESCRIPTION="Music On Console - ncurses interface for playing audio files"
 HOMEPAGE="http://moc.daper.net"
-SRC_URI="http://dev.gentoo.org/~ssuominen/${P}.tar.xz"
+SRC_URI="http://dev.gentoo.org/~radhermit/dist/${P}.tar.xz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha amd64 ppc ppc64 sparc x86"
-IUSE="aac alsa curl debug ffmpeg flac jack libsamplerate mad modplug musepack oss sid sndfile speex timidity +unicode vorbis wavpack"
+KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE="aac alsa +cache curl debug ffmpeg flac jack libsamplerate mad +magic modplug musepack
+oss sid sndfile speex timidity tremor +unicode vorbis wavpack"
 
 # libltdl from libtool is used at runtime
 RDEPEND=">=sys-devel/libtool-2.2.6b
-	>=sys-libs/db-4
 	sys-libs/ncurses[unicode?]
 	aac? ( media-libs/faad2 )
 	alsa? ( media-libs/alsa-lib )
+	cache? ( >=sys-libs/db-4 )
 	curl? ( net-misc/curl )
 	ffmpeg? ( virtual/ffmpeg )
 	flac? ( media-libs/flac )
 	jack? ( media-sound/jack-audio-connection-kit )
 	libsamplerate? ( media-libs/libsamplerate )
 	mad? ( media-libs/libmad sys-libs/zlib media-libs/libid3tag )
+	magic? ( sys-apps/file )
 	modplug? ( media-libs/libmodplug )
 	musepack? ( media-sound/musepack-tools media-libs/taglib )
 	sid? ( >=media-libs/libsidplay-2 )
 	sndfile? ( media-libs/libsndfile )
 	speex? ( media-libs/speex )
 	timidity? ( media-libs/libtimidity media-sound/timidity++ )
-	vorbis? ( media-libs/libvorbis )
+	vorbis? (
+		media-libs/libogg
+		tremor? ( media-libs/tremor )
+		!tremor? ( media-libs/libvorbis )
+	)
 	wavpack? ( media-sound/wavpack )"
 DEPEND="${RDEPEND}
+	app-arch/xz-utils
 	virtual/pkgconfig"
-
-src_prepare() {
-	eautoreconf
-}
 
 src_configure() {
 	local myconf=(
 		--docdir="${EPREFIX}"/usr/share/doc/${PF}
 		$(use_enable debug)
+		$(use_enable cache)
 		$(use_with oss)
 		$(use_with alsa)
 		$(use_with jack)
+		$(use_with magic)
 		$(use_with unicode ncursesw)
 		$(use_with libsamplerate samplerate)
 		$(use_with aac)
@@ -61,7 +65,7 @@ src_configure() {
 		$(use_with sndfile)
 		$(use_with speex)
 		$(use_with timidity)
-		$(use_with vorbis)
+		$(use_with vorbis vorbis $(usex tremor tremor ""))
 		$(use_with wavpack)
 		$(use_with curl)
 		)
@@ -70,7 +74,6 @@ src_configure() {
 }
 
 src_install() {
-	emake DESTDIR="${D}" install
-	dodoc AUTHORS NEWS TODO # The rest is installed by doc_DATA from "${S}"/Makefile.am
+	default
 	find "${ED}" -name '*.la' -exec sed -i -e "/^dependency_libs/s:=.*:='':" {} +
 }
