@@ -11,4 +11,4 @@ REQUIRED_USE=python_single_target_python2_6? ( python_targets_python2_6 ) python
 SLOT=0
 SRC_URI=mirror://gnome/sources/anjuta/3.8/anjuta-3.8.4.tar.xz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	63afaaed8aa819fdcb814c7cd39495a2	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	2ff578fb151da221e1797f12e2990e72	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	60f01dcce699345bbe95db0476914874	gnome2-utils	cf14abfc65f26151fd2e33d722422ee3	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-single-r1	b13f5baea5da0da5a5dcc6b8b79706a2	python-utils-r1	5d822763b5668548984ff7132eec9ad0	readme.gentoo	2466b2f6a77a9600954c6b99ebca6e02	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	vala	aa890daf29e67d32e9bff8e12ef653ca	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=50b0d70c479bc7f6dfa8cea02776fce7
+_md5_=90b4e6a46cb0cef33495d2237e20627d
