@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install prepare
-DEPEND=>=sys-devel/libtool-2.2.6b >=sys-libs/db-4 sys-libs/ncurses[unicode?] aac? ( media-libs/faad2 ) alsa? ( media-libs/alsa-lib ) curl? ( net-misc/curl ) ffmpeg? ( virtual/ffmpeg ) flac? ( media-libs/flac ) jack? ( media-sound/jack-audio-connection-kit ) libsamplerate? ( media-libs/libsamplerate ) mad? ( media-libs/libmad sys-libs/zlib media-libs/libid3tag ) modplug? ( media-libs/libmodplug ) musepack? ( media-sound/musepack-tools media-libs/taglib ) sid? ( >=media-libs/libsidplay-2 ) sndfile? ( media-libs/libsndfile ) speex? ( media-libs/speex ) timidity? ( media-libs/libtimidity media-sound/timidity++ ) vorbis? ( media-libs/libvorbis ) wavpack? ( media-sound/wavpack ) virtual/pkgconfig || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
-DESCRIPTION=Music On Console - ncurses interface for playing audio files
-EAPI=4
-HOMEPAGE=http://moc.daper.net
-IUSE=aac alsa curl debug ffmpeg flac jack libsamplerate mad modplug musepack oss sid sndfile speex timidity +unicode vorbis wavpack
-KEYWORDS=alpha amd64 ppc ppc64 sparc x86
-LICENSE=GPL-2
-RDEPEND=>=sys-devel/libtool-2.2.6b >=sys-libs/db-4 sys-libs/ncurses[unicode?] aac? ( media-libs/faad2 ) alsa? ( media-libs/alsa-lib ) curl? ( net-misc/curl ) ffmpeg? ( virtual/ffmpeg ) flac? ( media-libs/flac ) jack? ( media-sound/jack-audio-connection-kit ) libsamplerate? ( media-libs/libsamplerate ) mad? ( media-libs/libmad sys-libs/zlib media-libs/libid3tag ) modplug? ( media-libs/libmodplug ) musepack? ( media-sound/musepack-tools media-libs/taglib ) sid? ( >=media-libs/libsidplay-2 ) sndfile? ( media-libs/libsndfile ) speex? ( media-libs/speex ) timidity? ( media-libs/libtimidity media-sound/timidity++ ) vorbis? ( media-libs/libvorbis ) wavpack? ( media-sound/wavpack )
-SLOT=0
-SRC_URI=http://dev.gentoo.org/~ssuominen/moc-2.5.0_alpha4_p20111211.tar.xz
-_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f
-_md5_=7c3e6e1e05288a9d4be97d3269147d8b
