@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure install
+DEPEND=>=sys-devel/libtool-2.2.6b sys-libs/ncurses[unicode?] aac? ( media-libs/faad2 ) alsa? ( media-libs/alsa-lib ) cache? ( >=sys-libs/db-4 ) curl? ( net-misc/curl ) ffmpeg? ( virtual/ffmpeg ) flac? ( media-libs/flac ) jack? ( media-sound/jack-audio-connection-kit ) libsamplerate? ( media-libs/libsamplerate ) mad? ( media-libs/libmad sys-libs/zlib media-libs/libid3tag ) magic? ( sys-apps/file ) modplug? ( media-libs/libmodplug ) musepack? ( media-sound/musepack-tools media-libs/taglib ) sid? ( >=media-libs/libsidplay-2 ) sndfile? ( media-libs/libsndfile ) speex? ( media-libs/speex ) timidity? ( media-libs/libtimidity media-sound/timidity++ ) vorbis? ( media-libs/libogg tremor? ( media-libs/tremor ) !tremor? ( media-libs/libvorbis ) ) wavpack? ( media-sound/wavpack ) app-arch/xz-utils virtual/pkgconfig
+DESCRIPTION=Music On Console - ncurses interface for playing audio files
+EAPI=5
+HOMEPAGE=http://moc.daper.net
+IUSE=aac alsa +cache curl debug ffmpeg flac jack libsamplerate mad +magic modplug musepack oss sid sndfile speex timidity tremor +unicode vorbis wavpack
+KEYWORDS=~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=>=sys-devel/libtool-2.2.6b sys-libs/ncurses[unicode?] aac? ( media-libs/faad2 ) alsa? ( media-libs/alsa-lib ) cache? ( >=sys-libs/db-4 ) curl? ( net-misc/curl ) ffmpeg? ( virtual/ffmpeg ) flac? ( media-libs/flac ) jack? ( media-sound/jack-audio-connection-kit ) libsamplerate? ( media-libs/libsamplerate ) mad? ( media-libs/libmad sys-libs/zlib media-libs/libid3tag ) magic? ( sys-apps/file ) modplug? ( media-libs/libmodplug ) musepack? ( media-sound/musepack-tools media-libs/taglib ) sid? ( >=media-libs/libsidplay-2 ) sndfile? ( media-libs/libsndfile ) speex? ( media-libs/speex ) timidity? ( media-libs/libtimidity media-sound/timidity++ ) vorbis? ( media-libs/libogg tremor? ( media-libs/tremor ) !tremor? ( media-libs/libvorbis ) ) wavpack? ( media-sound/wavpack )
+SLOT=0
+SRC_URI=http://dev.gentoo.org/~radhermit/dist/moc-2.5.0_beta1_p20130907.tar.xz
+_md5_=b6d9cec620ecd3f9c34e7cb59baea35f
